Added Cypress Installation

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "em:start": "firebase emulators:start --import=./saved-data --export-on-exit",
+    "em:exec": "firebase emulators:exec --import=./saved-data 'npm run dev'",
+    "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm run dev'"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
