--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "coverage": "vitest run --coverage",
     "em:start": "firebase emulators:start --import=./saved-data --export-on-exit",
     "em:exec": "firebase emulators:exec --import=./saved-data 'npm run dev'",
-    "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm run dev'"
+    "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm run dev'",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -36,6 +37,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "cypress": "^15.7.0",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^6.0.0-rc.1",
     "eslint-plugin-react-refresh": "^0.4.19",
